--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           context: .
           file: melodic/Dockerfile
-          push: ${env.PUSH_TO_REGISTRY}
+          push: ${{env.PUSH_TO_REGISTRY}}
           tags: registry.cloud.mov.ai/develop/ros-master:melodic
           build-args:
 
@@ -76,6 +76,6 @@ jobs:
         with:
           context: .
           file: noetic/Dockerfile
-          push: ${env.PUSH_TO_REGISTRY}
+          push: ${{env.PUSH_TO_REGISTRY}}
           tags: registry.cloud.mov.ai/develop/ros-master:noetic
           build-args:
