--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           context: .
           file: melodic/Dockerfile
-          push: ${{ env.BRANCH == main }}
+          push: ${{ env.BRANCH == 'main' }}
           tags: registry.cloud.mov.ai/develop/ros-master:melodic
           build-args:
           pull: true
@@ -73,7 +73,7 @@ jobs:
         with:
           context: .
           file: noetic/Dockerfile
-          push: ${{ env.BRANCH == main }}
+          push: ${{ env.BRANCH == 'main' }}
           tags: registry.cloud.mov.ai/develop/ros-master:noetic
           build-args:
           pull: true
