--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -13,7 +13,7 @@ jobs:
   DeployMelodic:
     runs-on: ubuntu-20.04
     steps:
-      - run: echo "Running on branch: ${{ github.ref }}"
+      - run: echo "Running on branch ${{ github.ref }}"
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -50,7 +50,7 @@ jobs:
   DeployNoetic:
     runs-on: ubuntu-20.04
     steps:
-      - run: echo "Running on branch: ${{ github.ref }}"
+      - run: echo "Running on branch ${{ github.ref }}"
       - name: Checkout
         uses: actions/checkout@v2
 
