--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,86 +1,36 @@
-name: "Deploy to Docker Registry"
+name: "Build&Deploy MOVAI ROS-master images"
 
 on:
-  # Trigger the workflow on push or pull request,
+  # Trigger the workflow on push or pull request
   # but only for the main branch
+  # or on tag of type v*.*.*
   push:
     branches:
       - main
+    tags:
+      - 'v*.*.*'
   pull_request:
     branches:
       - main
+  # on:
+  #   release:
+  #     types: [released]
 jobs:
-  DeployMelodic:
-    runs-on: ubuntu-20.04
-    steps:
-      - run: echo "Running on branch ${{ github.ref }}"
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Hadolint melodic
-        uses: hadolint/hadolint-action@v1.6.0
-        with:
-          dockerfile: melodic/Dockerfile
-          format: tty
-          failure-threshold: error # optional, default is info
-          # A space separated string of rules to ignore
-          ignore: # optional
-          # Path to a config file
-          config: # optional
-
-      - name: Login to Movai Registry
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.PORTUS_APP_USER }}
-          password: ${{ secrets.PORTUS_APP_TOKEN }}
-          registry: registry.cloud.mov.ai
-
-      - name: Build and push melodic
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: melodic/Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: |
-            registry.cloud.mov.ai/develop/ros-master:melodic
-            registry.cloud.mov.ai/qa/ros-master:melodic
-          build-args:
-          pull: true
-
-  DeployNoetic:
-    runs-on: ubuntu-20.04
-    steps:
-      - run: echo "Running on branch ${{ github.ref }}"
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Hadolint noetic
-        uses: hadolint/hadolint-action@v1.6.0
-        with:
-          dockerfile: noetic/Dockerfile
-          format: tty
-          failure-threshold: error # optional, default is info
-          # A space separated string of rules to ignore
-          ignore: # optional
-          # Path to a config file
-          config: # optional
-
-      - name: Login to Movai Registry
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.PORTUS_APP_USER }}
-          password: ${{ secrets.PORTUS_APP_TOKEN }}
-          registry: registry.cloud.mov.ai
-
-      - name: Build and push noetic
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: noetic/Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: |
-            registry.cloud.mov.ai/develop/ros-master:noetic
-            registry.cloud.mov.ai/qa/ros-master:noetic
-          build-args:
-          pull: true
-
+  ros-master-melodic:
+    uses: MOV-AI/containers-movai-base/.github/workflows/docker-workflow.yml@v1.0.1
+    with:
+      docker_file: melodic/Dockerfile
+      docker_image: registry.cloud.mov.ai/devops/ros-master-melodic
+      github_ref: ${{ github.ref }}
+    secrets:
+      registry_user: ${{ secrets.PORTUS_APP_USER }}
+      registry_password: ${{ secrets.PORTUS_APP_TOKEN }}
+  ros-master-noetic:
+    uses: MOV-AI/containers-movai-base/.github/workflows/docker-workflow.yml@v1.0.1
+    with:
+      docker_file: noetic/Dockerfile
+      docker_image: registry.cloud.mov.ai/devops/ros-master-noetic
+      github_ref: ${{ github.ref }}
+    secrets:
+      registry_user: ${{ secrets.PORTUS_APP_USER }}
+      registry_password: ${{ secrets.PORTUS_APP_TOKEN }}
