--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -30,7 +30,7 @@ jobs:
     uses: MOV-AI/.github/.github/workflows/docker-workflow.yml@main
     with:
       docker_file: noetic/Dockerfile
-      docker_image: registry.cloud.mov.ai/devops/ros-master-noetic
+      docker_image: devops/ros-master-noetic
       public: true
       public_image: ce/ros-master-noetic
       github_ref: ${{ github.ref }}
