--- a/melodic/Dockerfile
+++ b/melodic/Dockerfile
@@ -1,5 +1,5 @@
-ARG DOCKER_REGISTRY="registry.cloud.mov.ai"
-FROM ${DOCKER_REGISTRY}/devops/movai-base-melodic:v1.4.5
+ARG DOCKER_REGISTRY="ghcr.io/mov-ai"
+FROM ${DOCKER_REGISTRY}/ce/movai-base-melodic:v1.4.9
 
 # Labels
 LABEL description="MOV.AI Ros Master Base Image"
