--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -17,24 +17,6 @@ on:
   release:
     types: [released]
 jobs:
-  ros-master-melodic:
-    uses: MOV-AI/.github/.github/workflows/docker-workflow.yml@v1
-    with:
-      docker_file: melodic/Dockerfile
-      docker_image: devops/ros-master-melodic
-      public: true
-      public_image: ce/ros-master-melodic
-      github_ref: ${{ github.ref }}
-      deploy: ${{ contains(github.ref, 'refs/heads/main') || contains(github.ref, 'refs/tags/v')}}
-      version: ${GITHUB_REF##*/}
-      push_latest: ${{ contains(github.ref, 'refs/heads/main') || contains(github.ref, 'refs/tags/v') }}
-      snyk_check: true
-    secrets:
-      registry_user: ${{ secrets.PORTUS_APP_USER }}
-      registry_password: ${{ secrets.PORTUS_APP_TOKEN }}
-      pub_registry_user: ${{ secrets.PORTUS_APP_USER }}
-      pub_registry_password: ${{ secrets.PORTUS_APP_TOKEN }}
-      snyk_token: ${{ secrets.SNYK_TOKEN }}
   ros-master-noetic:
     uses: MOV-AI/.github/.github/workflows/docker-workflow.yml@v1
     with:
@@ -47,6 +29,7 @@ jobs:
       version: ${GITHUB_REF##*/}
       push_latest: ${{ contains(github.ref, 'refs/heads/main') || contains(github.ref, 'refs/tags/v') }}
       snyk_check: true
+      platforms: linux/amd64, linux/arm/v7, linux/arm64
     secrets:
       registry_user: ${{ secrets.PORTUS_APP_USER }}
       registry_password: ${{ secrets.PORTUS_APP_TOKEN }}
